tests/negative/Iterators1.juvix
module Iterators1;

syntax iterator map {init: 0};
map : {A B : Type} → (A → B) → A → B
| f x := f x;

builtin bool
type Bool :=
  | true : Bool
  | false : Bool;

main : Bool := map (y := false) (x in true) x;
